<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_home">Home</string>
    <string name="title_headlines">Headlines</string>
    <string name="title_trending">Trending</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="tab_world">World</string>
    <string name="tab_business">Business</string>
    <string name="tab_politics">Politics</string>
    <string name="tab_sports">Sports</string>
    <string name="tab_technology">Technology</string>
    <string name="tab_science">Science</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
