<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.news_application.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_headlines"
        android:name="com.example.news_application.ui.headlines.HeadlinesFragment"
        android:label="@string/title_headlines"
        tools:layout="@layout/fragment_headlines" />

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.example.news_application.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.news_application.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
</navigation>
